--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Traveland</title>
+    <link rel="icon" href="./images/trevland-icon.png" />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
@@ -13,11 +14,21 @@
         <nav class="navigation">
           <a class="logo" href="./index.html" class="logo">Trevland</a>
           <ul class="navigation__list">
-            <li class="navigation__item">Home</li>
-            <li class="navigation__item">Location</li>
-            <li class="navigation__item">Blog</li>
-            <li class="navigation__item">About</li>
-            <li class="navigation__item">Contact</li>
+            <li class="navigation__item">
+              <a href="#home" class="navigation__link">Home</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#location" class="navigation__link">Location</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#blog" class="navigation__link">Blog</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#about" class="navigation__link">About</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#contact" class="navigation__link">Contact</a>
+            </li>
           </ul>
         </nav>
         <button class="btn header__btn">Booking now</button>
@@ -26,7 +37,10 @@
     <main>
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Railtrips To Here, There And Everywhere!</h1>
+          <h1 class="hero__title">
+            <span class="hero__title--top">Railtrips To Here,</span> There And
+            Everywhere!
+          </h1>
           <p class="hero__text">
             We all wish to start our year the best way possible and also
             according to a common belief if you have a great start to your.
