add location section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="home">
       <div class="container header__container">
         <nav class="navigation">
           <a class="logo" href="./index.html" class="logo">Trevland</a>
@@ -46,6 +46,63 @@
             according to a common belief if you have a great start to your.
           </p>
           <button class="btn hero__btn">Explore more</button>
+        </div>
+      </section>
+
+      <section class="section location" id="location">
+        <div class="container">
+          <h2 class="section__title">Popular Location</h2>
+          <p class="section__text">
+            For every one of us, travel came first. We’ve spent years living as
+            nomads, pioneers, and voyagers— from island hopping in the
+          </p>
+          <ul class="cards">
+            <li class="cards__item">
+              <a href="" class="cards__link">
+                <img
+                  src="./images/features_img_1@1x.jpg"
+                  alt="Air balloons over the mountains"
+                />
+                <div class="cards__text-wrapper">
+                  <h3 class="cards__title">Istanbul, Turkey</h3>
+                  <p class="cards__description">
+                    Istanbul is a major city in Turkey that straddles Europe.
+                  </p>
+                </div>
+              </a>
+            </li>
+
+            <li class="cards__item">
+              <a href="" class="cards__link"
+                ><img
+                  src="./images/features_img_2@1x.jpg"
+                  alt="A golden statue of deity near Kuala Lumpur"
+                />
+                <div class="cards__text-wrapper">
+                  <h3 class="cards__title">Kuala Lumpur, Malaysia</h3>
+                  <p class="cards__description">
+                    A 272-step long trek leads you to this century.
+                  </p>
+                </div></a
+              >
+            </li>
+
+            <li class="cards__item">
+              <a href="" class="cards__link"
+                ><img
+                  src="./images/features_img_3@1x.jpg"
+                  alt="A traditional Korean temple, sits on the rocky shoreline by the sea"
+                />
+                <div class="cards__text-wrapper">
+                  <h3 class="cards__title">Seoul, South Korea</h3>
+                  <p class="cards__description">
+                    South Korea officially the Republic of Korea is a country in
+                    East Asia.
+                  </p>
+                </div></a
+              >
+            </li>
+          </ul>
         </div>
       </section>
     </main>
